# pointpillar_ros

./: README.md
detection_ros/: CMakeLists.txt  package.xml
detection_ros/launch/: pointpillars.launch  pointpillars.rviz
detection_ros/msg/: ObstacleDetection.msg
detection_ros/tools/: track.py
detection_ros/tools/cfgs/custom_models/: dsvt_maritime.yaml
detection_ros/tools/cfgs/dataset_configs/: custom_dataset.yaml
